@@ -1,3 +1,6 @@
+2013-04-05 arnaud.fontaine
+* Implement Extensions to be able to check whether a report has been generated.
+
 2011-10-11 Xavier
 * Selenium core updated (2.6.0)
 * captureEntirePageScreenshot is available to take screenshots with Selenium (Firefox only)
